--- a/smart-exchange-back/src/main/resources/static/index.html
+++ b/smart-exchange-back/src/main/resources/static/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <script src="https://www.google.com/recaptcha/api.js?render=6Le4mg0pAAAAAM6m6mKlFc4Tcrlw_1rI4kSl0SM8"></script> -->
+  <script type="application/javascript">
+    var global = window;
+  </script>
 <style>.mat-typography{font-size:14px;font-weight:400;line-height:20px;font-family:Roboto,sans-serif;letter-spacing:.0178571429em}body{margin:0}html,body{height:100%}body{margin:0;height:100%;background:#F5F5F5;font-size:1.5em}</style><link rel="stylesheet" href="styles.81751a9b41d66a81.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.81751a9b41d66a81.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.dbee082cfc231669.js" type="module"></script><script src="polyfills.ef957852c38e00d2.js" type="module"></script><script src="main.0893eb4a3f8b8a7a.js" type="module"></script>
+<script src="runtime.dbee082cfc231669.js" type="module"></script><script src="polyfills.ef957852c38e00d2.js" type="module"></script><script src="main.cc264db92403a01d.js" type="module"></script>
 
 </body></html>
