--- a/smart-exchange-frnt/src/index.html
+++ b/smart-exchange-frnt/src/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <script src="https://www.google.com/recaptcha/api.js?render=6Le4mg0pAAAAAM6m6mKlFc4Tcrlw_1rI4kSl0SM8"></script> -->
+  <script type="application/javascript">
+    var global = window;
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
