--- a/smart-exchange-movil/src/index.html
+++ b/smart-exchange-movil/src/index.html
@@ -19,6 +19,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <script type="application/javascript">
+    var global = window;
+  </script>
 </head>
 
 <body>
